hphp/hack/test/typecheck/trait_reuse/trait_reuse_long_chain.php.exp
File "trait_reuse_long_chain.php", line 23, characters 7-17:
Traits with final methods cannot be reused, and `ReusedTrait` is already used by `GrandParent`. (Typing[4186])
File "trait_reuse_long_chain.php", line 15, characters 7-17:
`GrandParent` is defined here
File "trait_reuse_long_chain.php", line 16, characters 7-16:
`GrandParent` uses `TraitThree`
File "trait_reuse_long_chain.php", line 12, characters 7-14:
`TraitThree` uses `TraitTwo`
File "trait_reuse_long_chain.php", line 8, characters 7-17:
`TraitTwo` uses `ReusedTrait`
File "trait_reuse_long_chain.php", line 4, characters 25-27:
`ReusedTrait` has a final method `foo`
