hphp/hack/test/typecheck/trait_reuse/trait_reuse_long_chain.php
<?hh

trait ReusedTrait {
  public final function foo(): void {}
}

trait TraitTwo {
  use ReusedTrait;
}

trait TraitThree {
  use TraitTwo;
}

class GrandParent {
  use TraitThree;
}

class MyParent extends GrandParent {
}

class BadClass extends MyParent {
  use ReusedTrait;
}
